# recidia-audio-visualizer

./: README.md  meson.build  settings.cfg
inc/: qt_window.h  qt_window.hpp  recidia.h
shaders/: bounce.vert  default.frag  default.vert  space.frag
src/: audio.c  config.cpp  curses.cpp  main.cpp  processing.cpp  settings_gui.cpp  vulkan.cpp  window.cpp
src/widgets/: devices.cpp  settings.cpp  stats.cpp
vulkan/: shader.vert  vert.spv
